--- a/Develop/assets/css/style.css
+++ b/Develop/assets/css/style.css
@@ -49,9 +49,10 @@ a {
     text-decoration: none;
 }
 
-/* moved .hero here to match sequential order of HTML */
+/* moved .hero here to match sequential order of HTML,
+adjusted height of image to initially take up more of landing page */
 .hero {
-    height: 800px;
+    height: 840px;
     width: 100%;
     margin-bottom: 25px;
     background-image: url("../images/digital-marketing-meeting.jpg");
@@ -62,6 +63,7 @@ a {
 /* moved .content here to match sequential order of HTML */
 .content {
     width: 75%;
+    height: 80%;
     display: inline-block;
     margin-left: 20px;
 }
@@ -97,8 +99,7 @@ p {
     padding: 20px;
     clear: both;
     float: right;
-    width: 20%;
-    height: 100%;
+    width: 22%;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: #2589bd;
 }
@@ -115,34 +116,15 @@ p {
     text-align: center;
 }
 
-
-.benefit-lead img {
+/* consolidated 3 classes with same styling */
+.benefit-lead img, .benefit-brand img, .benefit-cost img {
     display: block;
     margin: 10px auto;
     max-width: 150px;
 }
 
-.benefit-brand img {
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
-}
-
-.benefit-cost img {
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
-}
-
-.search-engine-optimization img {
-    max-height: 200px;
-}
-
-.online-reputation-management img {
-    max-height: 200px;
-}
-
-.social-media-marketing img {
+/*consolidated 3 classes with same styling */
+.search-engine-optimization img, .online-reputation-management img, .social-media-marketing img {
     max-height: 200px;
 }
 
