changed background color of sidebar to improve contrast/accessibility

--- a/Develop/assets/css/style.css
+++ b/Develop/assets/css/style.css
@@ -101,7 +101,7 @@ p {
     float: right;
     width: 22%;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #2589bd;
+    background-color: #136896;
 }
 
 /* consolidated 3 classes with same styling */
